--- a/index.html
+++ b/index.html
@@ -241,43 +241,44 @@
                             </div>
                         </div>
                     </div>
-                    <!--
-                    <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item branded logos">
+                    
+                    <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item elearning web">
                         <div class="portfolio-wrapper">
                             <div class="portfolio-single">
                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio/9.jpg" class="img-responsive" alt="">
+                                    <img src="images/portfolio/11.png" class="img-responsive" alt="">
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
-                                        <li><a href="images/portfolio/9.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="portfolio-pages/mooc.html"><i class="fa fa-link"></i></a></li>
+<!--                                        <li><a href="images/portfolio/11.png" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>-->
                                     </ul>
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Sailing Vivamus</h2>
+                                <h2>Career 911 Northwestern MOOC</h2>
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item branded mockup">
+                    <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item elearning">
                         <div class="portfolio-wrapper">
                             <div class="portfolio-single">
                                 <div class="portfolio-thumb">
-                                    <img src="images/portfolio/10.jpg" class="img-responsive" alt="">
+                                    <img src="images/portfolio/11212.jpg" class="img-responsive" alt="">
                                 </div>
                                 <div class="portfolio-view">
                                     <ul class="nav nav-pills">
-                                        <li><a href="portfolio-details.html"><i class="fa fa-link"></i></a></li>
-                                        <li><a href="images/portfolio/10.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>
+                                        <li><a href="portfolio-pages/dfa-badge.html"><i class="fa fa-link"></i></a></li>
+<!--                                        <li><a href="images/portfolio/10.jpg" data-lightbox="example-set"><i class="fa fa-eye"></i></a></li>-->
                                     </ul>
                                 </div>
                             </div>
                             <div class="portfolio-info ">
-                                <h2>Sailing Vivamus</h2>
+                                <h2>DFA Badges</h2>
                             </div>
                         </div>
                     </div>
+<!--
                     <div class="col-xs-6 col-sm-4 col-md-3 portfolio-item design folio">
                         <div class="portfolio-wrapper">
                             <div class="portfolio-single">
@@ -386,7 +387,8 @@
                             </div>
                         </div>
                     </div>
-                    -->
+-->
+                    
                 </div>
                 <!--
                 <div class="portfolio-pagination">
