--- a/404.html
+++ b/404.html
@@ -35,12 +35,12 @@
                                 </div>
                             </div>
                             <h2>PAGE NOT FOUND</h2>
-                            <p>The page you are looking for might have been removed, had its name changed.</p>
-                            <a href="index.html" class="btn btn-error">RETURN TO THE HOMEPAGE</a>
+                            <p>Apparently, the page you are looking for does not exist. It might have been removed or had its name changed.</p>
+                            <a href="/" class="btn btn-error">RETURN TO THE HOMEPAGE</a>
                             <div class="social-link">
-                                <span><a href="#"><i class="fa fa-facebook"></i></a></span>
-                                <span><a href="#"><i class="fa fa-twitter"></i></a></span>
-                                <span><a href="#"><i class="fa fa-google-plus"></i></a></span>
+                                <span><a href="https://www.linkedin.com/in/derekthurber" target="_blank"><i class="fa fa-linkedin"></i></a></span>
+                                <span><a href="https://github.com/dwthurber" target="_blank"><i class="fa fa-github"></i></a></span>
+                                <span><a href="https://www.google.com/+DerekThurber" target="_blank"><i class="fa fa-google-plus"></i></a></span>
                             </div>
                         </div>
                     </div>
