--- a/portfolio-pages/mooc.html
+++ b/portfolio-pages/mooc.html
@@ -64,12 +64,8 @@
                     </div>
                     <div class="project-info overflow">
                         <h3>Project Info</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tempus nibh sed elimttis adipiscing. Fusce in hendrerit purus. Suspendisse potenti. Proin quis eros odio, dapibus dictum mauris. Donec nisi libero, adipiscing id pretium eget, consectetur sit amet leo. Nam at eros quis mi egestas fringilla non nec purus.</p>
-                        <ul class="elements">
-                            <li><i class="fa fa-angle-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-                            <li><i class="fa fa-angle-right"></i> Donec tincidunt felis quis ipsum porttitor, non rutrum lorem rhoncus.</li>
-                            <li><i class="fa fa-angle-right"></i> Nam in quam consectetur nulla placerat dapibus ut ut nunc.</li>
-                        </ul>
+                        <p>As part of the design team for the Northwestern Feinberg's Career 911 massive open online course (MOOC) through <a href="https://www.coursera.org" target="_blank">Coursera</a>. I provided learning design expertise and advice to the content team in the construction of lessons and assessment plans. I also custom designed components of the online course on Coursera's learning management content delivery system, and built an interactive PDF of the course assignments. The interactive PDF provided engaging lessons and scaffolded learning design which walked students through the job search and application process comprehensively from start to finish.</p>
+                      <p>All content was custom designed for learning in a massive open online course with the unique challenges of scale and access. A great deal of thought was put into how to design the course for a diverse audience spanning across the world and across the spectrum of age and experience to create the most engaging course possible no matter the learner's prior knowledge and desired outcomes.</p>
                     </div>
                     <div class="skills overflow">
                         <h3>Skills:</h3>
